--- a/SpeakHereClasses/SpeakHereViewController.xib
+++ b/SpeakHereClasses/SpeakHereViewController.xib
@@ -92,7 +92,7 @@
 								<int key="IBUISystemItemIdentifier">5</int>
 							</object>
 							<object class="IBUIBarButtonItem" id="767851788">
-								<string key="IBUITitle">Send</string>
+								<string key="IBUITitle">Done</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<float key="IBUIWidth">100</float>
 								<int key="IBUIStyle">1</int>
@@ -429,7 +429,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>{{627, 156}, {320, 480}}</string>
+					<string>{{632, 526}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
@@ -536,7 +536,7 @@
 							<string>UIBarButtonItem</string>
 							<string>UILabel</string>
 							<string>AQLevelMeter</string>
-							<string>UIViewController</string>
+							<string>SpeakHereViewController</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -574,7 +574,7 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">viewController</string>
-								<string key="candidateClassName">UIViewController</string>
+								<string key="candidateClassName">SpeakHereViewController</string>
 							</object>
 						</object>
 					</object>
